# tempera

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  coverage.sh  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: codes.rs  custom.rs  errors.rs  lib.rs  main.rs  styling.rs  templating.rs  traits.rs
tests/: clean_template.rs  colorize.rs  colorize_template.rs  custom_styles.rs  lock_errors.rs  traits.rs
